--- a/.muttrc
+++ b/.muttrc
@@ -66,7 +66,7 @@ hdr_order from: to: cc: date: subject:  # and in this order
 
 # Yahoo
 set realname 							= "Rodrigo Pinto"
-set imap_user 						= "rodrigo_plp@yahoo.com"
+source ~/.mutt/credentials.muttrc
 set imap_check_subscribed = yes
 set imap_list_subscribed 	= yes
 set imap_idle
@@ -76,11 +76,12 @@ set folder 								= "imaps://imap.mail.yahoo.com:993"
 set spoolfile 						= "imaps://imap.mail.yahoo.com/INBOX"
 set postponed 						= "imaps://imap.mail.yahoo.com/Drafts"
 set record								= "imaps://imap.mail.yahoo.com/Sent"
-set smtp_url							= "smtp://rodrigo_plp@yahoo.com@smtp.yahoo.com:587"
+# set smtp_url							= "smtp://rodrigo_plp@yahoo.com@smtp.yahoo.com:587"
 set from									= "rodrigo_plp@yahoo.com"
 set sidebar_sort_method		= name
 
 set editor								= 'vim + -c "set textwidth=100" -c "set wrap"'
+set charset								= iso-8859-1
 
 # # Default inbox.
 # set spoolfile = "+steve-stevelosh.com/INBOX"
@@ -103,12 +104,13 @@ set editor								= 'vim + -c "set textwidth=100" -c "set wrap"'
 # set postponed = "+steve-stevelosh.com/drafts"
 
 # Index View Options ---------------------------------
+set status_format='-%f [Msgs:%?M?%M/?%m%?n? New:%n?%?o? Old:%o?%?d? Del:%d?%?F? Flag:%F?%?t? Tag:%t?%?p? Post:%p?%?b? Inc:%b?%?l? %l?]---(%s/%S)-%>-(%P)---'
 set date_format 		= "%e %b/%y %H:%M"
 set index_format 		= "[%Z]%?X?@& ?  %D  %-30.50F  %s"	# Flags, attachments, date, sender and subject
-set sort 						= threads                         	# like gmail
-set sort_aux 				= reverse-last-date-received  			# like gmail
-set uncollapse_jump                        							# don't collapse on an unread message
-set sort_re                                							# thread based on regex
+set sort 						= threads														# like gmail
+set sort_aux 				= reverse-last-date-received
+set uncollapse_jump																			# don't collapse on an unread message
+set sort_re																							# thread based on regex
 set reply_regexp 		= "^(([Rr][Ee]?(\[[0-9]+\])?: *)?(\[[^]]+\] *)?)*"
 
 # Index Key Bindings ---------------------------------
@@ -132,10 +134,12 @@ macro index C "<copy-message>?<toggle-mailboxes>" "copy a message to a mailbox"
 macro index M "<save-message>?<toggle-mailboxes>" "move a message to a mailbox"
 
 # Sidebar Navigation ---------------------------------
-bind index <down>   sidebar-next
-bind index <up>     sidebar-prev
+bind index J   			sidebar-next
+bind index K     		sidebar-prev
+bind index <up>  		sidebar-next
+bind index <down>		sidebar-prev
 bind index <right>  sidebar-open
-bind index,pager B sidebar-toggle-visible
+bind index,pager B	sidebar-toggle-visible
 
 # Pager View Options ---------------------------------
 set pager_index_lines = 10 # number of index lines to show
@@ -162,5 +166,4 @@ bind attach <return> view-mailcap
 
 # Colors ---------------------------------------------
 
-source ~/.mutt/colors/colors-mac.muttrc
-# source ~/.mutt/colors/colors-pc.muttrc
+source ~/.mutt/colors/colors-pc.muttrc
