--- a/rifle.conf
+++ b/rifle.conf
@@ -55,10 +55,27 @@ ext x?html?, X, flag f = open -a Safari "$@"
 ext x?html?, has w3m, terminal = w3m "$@"
 
 #-------------------------------------------
-# Text files
+# Code
 #-------------------------------------------
-ext xml|json|tex|py|pl|rb|js|sh|php|m[ark]d[own]|txt = vim "$@" 
-mime ^text = vim "$@"
+# Define the "editor" for text files as first action
+mime ^text,  label editor = $EDITOR -- "$@"
+mime ^text,  label pager  = "$PAGER" -- "$@"
+!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = $EDITOR -- "$@"
+!mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
+
+ext 1                         = man "$1"
+ext s[wmf]c, has zsnes, X     = zsnes "$1"
+ext s[wmf]c, has snes9x-gtk,X = snes9x-gtk "$1"
+ext nes, has fceux, X         = fceux "$1"
+ext exe                       = wine "$1"
+name ^[mM]akefile$            = make
+
+ext py  = python -- "$1"
+ext pl  = perl -- "$1"
+ext rb  = ruby -- "$1"
+ext js  = node -- "$1"
+ext sh  = sh -- "$1"
+ext php = php -- "$1"
 
 #--------------------------------------------
 # Audio without X
@@ -85,6 +102,10 @@ mime ^image/svg, X, flag f = open -a inkscape "$@"
 #-------------------------------------------
 # Misc
 #-------------------------------------------
+# Define the editor for non-text files + pager as last action
+              !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = ask
+label editor, !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = $EDITOR -- "$@"
+
 # Use LaunchServices to open file with default macOS application
 flag f = open "$@"
 
